--- a/more.html
+++ b/more.html
@@ -18,7 +18,7 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #d091e0; /* rasberry */
+      background-color: #d091e0; /* purpls */
       color: #ffffff;
   }
   .bg-2 { 
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
-       <img src="http://i66.tinypic.com/mvqltw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
         <p>Sammi is an avid crafter and fan of cartoon polar bears.</p>
     </div>
     <div class="col-sm-4"> 
