--- a/findfriends.html
+++ b/findfriends.html
@@ -83,8 +83,8 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE WATER IS ADHESIVE </p>
+  <h3 class="margin">Want to find a perfect tea match? </h3>
+  <p> Start your search here! </p>
   <a href="#" class="btn btn-default btn-lg">
     <span class = "glyphicon glyphicon-search"></span> Find Friends
   </a>
