--- a/more.html
+++ b/more.html
@@ -88,7 +88,7 @@
     </div>
  <p> </p>
  <p> </p>
- <p> Congratulations! You've found the secret page! Blah blah blah add more stuff here</p>
+ <p> Congratulations! You've found the secret page! Ice Bear is proud of you. </p>
 </div>
 
 
@@ -99,30 +99,30 @@
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
        <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-        <p>Sammi is an avid crafter and fan of cartoon polar bears.</p>
+        <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
       <img src="http://i63.tinypic.com/f5bml0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows.</p>
+      <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
       <img src="http://i63.tinypic.com/6gxv6b.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Jonathan does not have pink hair.</p>
+      <p>Jonathan does not have pink hair. </p>
     </div>
   </div>
   </div>
 
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">More</h3><br>
+  <h3 class="margin">Ice Bear has taken over this section.</h3><br>
   
 </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Boba.</p> 
+  <p>Boba. Ice bear can cook this. </p> 
 </footer>
 
 </body>
