--- a/more.html
+++ b/more.html
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
-       <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="https://pbs.twimg.com/profile_images/627323101366370304/QFid3q8T.jpg" class="img-responsive margin" style="width:100%" alt="Image">
         <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves, but Chris does not. </p>
     </div>
     <div class="col-sm-4"> 
