--- a/more.html
+++ b/more.html
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
-       <img src="https://pbs.twimg.com/profile_images/627323101366370304/QFid3q8T.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://vignette4.wikia.nocookie.net/webarebears/images/e/ec/Casual_Icey.png/revision/latest?cb=20150626062051" class="img-responsive margin" style="width:100%" alt="Image">
         <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves, but Chris does not. </p>
     </div>
     <div class="col-sm-4"> 
