--- a/more.html
+++ b/more.html
@@ -79,7 +79,14 @@
  <h1 class="margin">Welcome to the Easter Egg page! -Chris</h1>
     <div class="row">
       <div class="col-sm-4"> 
-        <img src= "https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" style="width:100%" alt="Image">
+        <p></p>
+      </div>
+      <div class="col-sm-4"> 
+        <p></p>
+        <img src="https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" class="img-responsive margin" style="width:100%" alt="Image">
+      </div>
+       <div class="col-sm-4"> 
+        <p></p>
       </div>
     </div>
  <p> Congratulations! You've found the secret page! Ice Bear, no Chris is proud of you. </p>
