--- a/more.html
+++ b/more.html
@@ -89,7 +89,7 @@
         <p></p>
       </div>
     </div>
- <p> Congratulations! You've found the secret page! Ice Bear, no Chris is proud of you. </p>
+ <p> Congratulations! You've found the secret page! Ice Bear, no Chris is proud of you. Sammi, Jonathan, and Donna don't actually exist. Plot twist: they have been bears in disguise the whole time. </p>
 </div>
 
 
@@ -100,17 +100,17 @@
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
        <img src="http://vignette4.wikia.nocookie.net/webarebears/images/e/ec/Casual_Icey.png/revision/latest?cb=20150626062051" class="img-responsive margin" style="width:100%" alt="Image">
-        <p>Sammi is an avid crafter and fan of cartoon polar bears. Ice Bear approves, but Chris does not. </p>
+        <p>Sammi is actually Ice Bear. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Backend </h4><p>Donna L</p>
       <img src="http://i63.tinypic.com/9kmt6w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Donna is a sarcastic procrastinator who appreciates unicorns that resemble cows. </p>
+      <p>Donna is actually a panda, currently being scratched with weird arms. </p>
     </div>
     <div class="col-sm-4"> 
       <h4>Full Stack </h4><p>Jonathan C</p>
       <img src="http://v.cdn.vine.co/r/videos/4BE85DC6BF1241164162244427776_3e0befa2789.4.5.1549606826501848125.mp4.jpg?versionId=sHBZxVUcLDdJYujWthFoMoOBB.ma3zFo" class="img-responsive margin" style="width:100%" alt="Image">
-      <p>Jonathan does not have pink hair. </p>
+      <p>Jonathan is actually Chris. </p>
     </div>
   </div>
   </div>
