--- a/more.html
+++ b/more.html
@@ -95,7 +95,7 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-    <h3 class="margin">Chris' Team</h3><br>
+    <h3 class="margin">The Real Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <h4>Web Design </h4><p>Sammi C</p>
