--- a/findfriends.html
+++ b/findfriends.html
@@ -78,6 +78,20 @@
   <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
  <h3 class="margin">Friend</h3><br>
+  <form name="imageForm">
+  <table border=3>
+  <tr>
+    <td>
+      <input onclick="displayImage();" type=button value="Display Random Image">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <img src="blank.jpg" name="canvas" />
+    </td>
+  </tr>
+  </table>
+</form>
   <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
 </div>
   
@@ -121,6 +135,14 @@
                           , "Jonathan Chai being a stinky house", "needing help with TextExcel (which also means Parsa needs help)"
                           , "Jonathan not having pink hair", "liking trains", "liking to eat stir fried squash and deep fried tofu and getting Chicken Bakes from Costco [:"
                           , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus"];
+    
+    var imagesArray = ["http://i65.tinypic.com/16kt102.jpg", "http://i65.tinypic.com/o8cgwm.jpg", "http://i65.tinypic.com/dz6ujq.jpg", "ahttp://i67.tinypic.com/2dwb2ox.jpg", "http://i66.tinypic.com/zvx1di.jpg", "http://i66.tinypic.com/zvx1di.jpg", "http://i66.tinypic.com/zvx1di.jpg"];
+
+function displayImage(){
+    var num = Math.floor(Math.random() * 7); 
+    document.canvas.src = imagesArray[num];
+
+}
   </script>
 </footer>
 
