--- a/findfriends.html
+++ b/findfriends.html
@@ -107,7 +107,7 @@
 
   
 </form>
-  <img src="http://i63.tinypic.com/30kf2xd.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="350">
+  
 </div>
   
 <!-- Second Container -->
@@ -151,7 +151,7 @@
                           , "Jonathan not having pink hair", "liking trains", "liking to eat stir fried squash and deep fried tofu and getting Chicken Bakes from Costco [:"
                           , "loving tea", "dabbing", "liking math", "math being in my name and loving Calculus"];
     
-    var imagesArray = ["http://i65.tinypic.com/16kt102.jpg", "http://i65.tinypic.com/o8cgwm.jpg", "http://i65.tinypic.com/dz6ujq.jpg", "ahttp://i67.tinypic.com/2dwb2ox.jpg", "http://i66.tinypic.com/zvx1di.jpg", "http://i63.tinypic.com/10xzno6.jpg", "http://i66.tinypic.com/2zxv7t5.jpg"];
+    var imagesArray = ["http://i65.tinypic.com/16kt102.jpg", "http://i65.tinypic.com/o8cgwm.jpg", "http://i65.tinypic.com/dz6ujq.jpg", "http://i67.tinypic.com/2dwb2ox.jpg", "http://i66.tinypic.com/zvx1di.jpg", "http://i63.tinypic.com/10xzno6.jpg", "http://i66.tinypic.com/2zxv7t5.jpg"];
 
 function displayImage(){
     var num = Math.floor(Math.random() * 7); 
