--- a/findfriends.html
+++ b/findfriends.html
@@ -104,9 +104,7 @@
 	<img id="img">
  	<span id="text2"></span>	
     </p>
-      <button onclick="changeText()">
-        click
-      </button>
+      <button name = "click" type="button" onclick="changeText()"> click</button>
     </div>
   </div>
 </form>
