--- a/findfriends.html
+++ b/findfriends.html
@@ -49,6 +49,30 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+    .button5 {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+}
+
+.button5:hover {
+    background-color: #555555;
+    color: white;
+}
     
   </style>
 </head>
@@ -104,7 +128,7 @@
 	<img id="img">
  	<span id="text2"></span>	
     </p>
-      <button name = "click" type="button" onclick="changeText()"> click</button>
+      <button class="button" name = "button5" type="button" onclick="changeText()"> click</button>
     </div>
   </div>
 </form>
