--- a/findfriends.html
+++ b/findfriends.html
@@ -63,13 +63,13 @@
     transition-duration: 0.4s;
     cursor: pointer;
 }
-    .button5 {
+    .button {
     background-color: white;
     color: black;
     border: 2px solid #555555;
 }
 
-.button5:hover {
+.button:hover {
     background-color: #555555;
     color: white;
 }
